Refresh site structure and styling

--- a/404.md
+++ b/404.md
@@ -4,14 +4,15 @@ title: "Page not found"
 permalink: /404.html
 description: "Not found."
 ---
-
-<section class="container" style="max-width:600px;">
-  <div class="section__head" style="margin-bottom:24px;">
-    <h1 class="section__title" style="font-size:2.2rem;">404</h1>
-    <p class="section__blurb" style="font-size:1.15rem;">That page doesn’t exist.</p>
-  </div>
-  <div class="panel" style="background:linear-gradient(120deg,#7aa2ff11 0%,#7cffc711 100%),var(--panel);box-shadow:0 4px 24px #7aa2ff22;">
-    <p class="muted">Try the homepage:</p>
-    <p><a class="btn" href="{{ "/" | relative_url }}">Go home</a></p>
+<section class="page">
+  <div class="container" style="max-width: 640px;">
+    <div class="section__head">
+      <h1 class="section__title">404</h1>
+      <p class="section__blurb">That page doesn’t exist.</p>
+    </div>
+    <div class="panel panel--glow">
+      <p class="muted">Try the homepage:</p>
+      <p><a class="btn" href="{{ '/' | relative_url }}">Go home</a></p>
+    </div>
   </div>
 </section>
